Autoscroll Gallery update

--- a/about.html
+++ b/about.html
@@ -19,13 +19,13 @@
     <div id="main" class='clear-top'>
       <div class="container my-4">
         <div class="row">
-          <div class="col-lg-6 col-md-12 align-self-center logo">
+          <div class="col-lg-5 col-md-12 align-self-center logo">
             <a class='w-100' href="/index.html">
               <img class='img-fluid' src="./static/cjg.png">
             </a>
           </div>
 
-          <div class="col-lg-6 col-md-12 mt-4">
+          <div class="p-0 col-lg-7 col-md-12 mt-4">
             <div class="mobile d-flex d-sm-flex d-md-flex d-lg-none justify-content-center">
               Mobile Menu
             </div>
