--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     <div id="main" class='clear-top'>
       <div class="container my-4">
         <div class="row">
-          <div class="col-lg-6 col-md-12 align-self-center logo">
+          <div class="col-lg-5 col-md-12 align-self-center logo">
             <a class='w-100' href="/index.html">
               <img class='img-fluid' src="./static/cjg.png">
             </a>
           </div>
 
-          <div class="col-lg-6 col-md-12 mt-4">
+          <div class="p-0 col-lg-7 col-md-12 mt-4">
             <div class="mobile d-flex d-sm-flex d-md-flex d-lg-none justify-content-center">
               Mobile Menu
             </div>
@@ -42,13 +42,33 @@
       <div class="container-fluid load mt-2">
         <div class="row">
           <div class="col p-0">
-            <img src="../static/home-banner.jpg" alt="" class="img-fluid">
+            <div class="carousel-wrapper load auto-scroll">
+              <div class="carousel">
+                <div class="carousel__photo">
+                  <img class='img-fluid' src="../static/home-banner.jpg">
+                </div>
+                <div class="carousel__photo">
+                  <img class='img-fluid' src="../static/contact.jpg">
+                </div>
+                <div class="carousel__photo">
+                  <img class='img-fluid' src="../static/home-banner.jpg">
+                </div>
+                <div class="carousel__photo">
+                  <img class='img-fluid' src="../static/contact.jpg">
+                </div>
+                <div class="carousel__photo">
+                  <img class='img-fluid' src="../static/home-banner.jpg">
+                </div>
+
+                <div class="carousel__button--next"></div>
+                <div class="carousel__button--prev"></div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-      <div class="container load">
 
-
+      <div class="container p-md-0 load">
         <div class="row mt-4">
           <div class="col-12">
             <h1>Bring Your Dream Home into Reality</h1>
@@ -65,7 +85,6 @@
             <a href="/contact.html">Schedule Free Consultation</a>
           </div>
         </div>
-
       </div>
     </div>
   </div>
