home button fix

--- a/index.html
+++ b/index.html
@@ -99,8 +99,10 @@
             <h1>Bring Your Dream Home into Reality</h1>
             <p>I have been designing things since my middle school drafting and shop classes in 1974 when I designed my first home - an octagon house, of course. I’ve been drawing ever since. In January of 2003 I started CJG Designs after spending 19 years working in many different areas of the Architectural field. But there is something about helping people with their home that I find more rewarding than any other kind of design.</p>
           </div>
+        </div>
+        <div class="row">
           <div class="col-lg-12">
-            <div class="btn-group load">
+            <div class="home-btn-group load">
               <a href='/projects-custom-homes.html' class="btn btn-orange">Custom Homes</a>
               <a href='/projects-remodels.html' class="btn btn-orange">Major Addtions</a>
               <a href='/projects-small-projects.html' class="btn btn-orange">Small Projects</a>
